// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsightsCommandButton renders per snapshot with extra className combined with its own 1`] = `
<DocumentFragment>
  <mock-button
    appearance="transparent"
    classname=""
    icon="[object Object]"
    insightscommandbuttoniconprops="[object Object]"
    shape="square"
  />
</DocumentFragment>
`;

exports[`InsightsCommandButton renders per snapshot with extra className combined with its own: Button props 1`] = `
{
  "appearance": "transparent",
  "children": undefined,
  "className": "",
  "icon": {
    "children": undefined,
  },
  "insightsCommandButtonIconProps": {
    "className": "startOverMenuItemIcon",
  },
  "shape": "square",
}
`;

exports[`InsightsCommandButton renders per snapshot with extra icon className combined with its own 1`] = `
<DocumentFragment>
  <mock-button
    appearance="transparent"
    icon="[object Object]"
    insightscommandbuttoniconprops="[object Object]"
    shape="square"
  >
    Load assessment
  </mock-button>
</DocumentFragment>
`;

exports[`InsightsCommandButton renders per snapshot with extra icon className combined with its own: Button props 1`] = `
{
  "appearance": "transparent",
  "children": "Load assessment",
  "className": undefined,
  "icon": {
    "children": <FolderOpenRegular
      className="icon-class-name"
    />,
  },
  "insightsCommandButtonIconProps": {
    "icon": <FolderOpenRegular
      className="icon-class-name"
    />,
  },
  "shape": "square",
}
`;

exports[`InsightsCommandButton renders per snapshot with iconProps passed through 1`] = `
<DocumentFragment>
  <mock-button
    appearance="transparent"
    icon="[object Object]"
    insightscommandbuttoniconprops="[object Object]"
    shape="square"
  >
    Load assessment
  </mock-button>
</DocumentFragment>
`;

exports[`InsightsCommandButton renders per snapshot with iconProps passed through: Button props 1`] = `
{
  "appearance": "transparent",
  "children": "Load assessment",
  "className": undefined,
  "icon": {
    "children": <FolderOpenRegular />,
  },
  "insightsCommandButtonIconProps": {
    "icon": <FolderOpenRegular />,
  },
  "shape": "square",
}
`;

exports[`InsightsCommandButton renders per snapshot with props passed through 1`] = `
<DocumentFragment>
  <mock-button
    appearance="transparent"
    classname=""
    icon="[object Object]"
    insightscommandbuttoniconprops="[object Object]"
    shape="square"
  >
    test-text
  </mock-button>
</DocumentFragment>
`;

exports[`InsightsCommandButton renders per snapshot with props passed through: Button props 1`] = `
{
  "appearance": "transparent",
  "children": "test-text",
  "className": "",
  "icon": {
    "children": undefined,
  },
  "insightsCommandButtonIconProps": {
    "className": "startOverMenuItemIcon",
  },
  "shape": "square",
}
`;
